# fs-i18n

./: CLAUDE.md  Cargo.toml  Containerfile  build.rs  package.toml
.github/workflows/: release.yml
locales/am/: common.ftl
locales/ar/: common.ftl
locales/be/: common.ftl
locales/bg/: common.ftl
locales/bn/: common.ftl
locales/cs/: common.ftl
locales/da/: common.ftl
locales/de/: activity-hub.ftl  ai.ftl  app-forge.ftl  auth-setup.ftl  auth.ftl  bots.ftl  browser.ftl  bus.ftl  channel-matrix.ftl  channel-telegram.ftl  common.ftl  container-app.ftl  db-engine-postgres.ftl  db-engine-sqlite.ftl  db.ftl  desktop.ftl  federation.ftl  forgejo.ftl  gui-engine-iced.ftl  health.ftl  icons.ftl  init.ftl  inventory.ftl  lenses.ftl  llm-mistral.ftl  llm-openai.ftl  mail.ftl  manager-service.ftl  manager-wiki.ftl  managers.ftl  matrix.ftl  navigation.ftl  node.ftl  pod-forge.ftl  registry.ftl  render.ftl  session.ftl  settings.ftl  store.ftl  tasks.ftl  (+3 more)
locales/el/: common.ftl
locales/en/: activity-hub.ftl  ai.ftl  app-forge.ftl  auth-setup.ftl  auth.ftl  bots.ftl  browser.ftl  bus.ftl  channel-matrix.ftl  channel-telegram.ftl  common.ftl  container-app.ftl  db-engine-postgres.ftl  db-engine-sqlite.ftl  db.ftl  desktop.ftl  federation.ftl  forgejo.ftl  gui-engine-iced.ftl  health.ftl  icons.ftl  info.ftl  init.ftl  inventory.ftl  lenses.ftl  llm-mistral.ftl  llm-openai.ftl  mail.ftl  manager-service.ftl  manager-wiki.ftl  managers.ftl  matrix.ftl  navigation.ftl  node.ftl  pod-forge.ftl  registry.ftl  render.ftl  session.ftl  settings.ftl  store.ftl  (+4 more)
locales/es/: common.ftl
locales/et/: common.ftl
locales/fa/: common.ftl
locales/fi/: common.ftl
locales/fr/: common.ftl
locales/ha/: common.ftl
locales/hi/: common.ftl
locales/hr/: common.ftl
locales/hu/: common.ftl
locales/id/: common.ftl
locales/it/: common.ftl
locales/ja/: common.ftl
locales/jv/: common.ftl
locales/ko/: common.ftl
locales/lt/: common.ftl
locales/lv/: common.ftl
locales/mr/: common.ftl
locales/nl/: common.ftl
locales/no/: common.ftl
locales/pa/: common.ftl
locales/pl/: common.ftl
proto/: i18n.proto
src/: bundle.rs  i18n.rs  lib.rs  locale.rs  main.rs  provider.rs  snippets.rs  tools.rs
tools/: toml_to_ftl.py
(+26 files in other folders)
