[package]
name        = "fs-i18n"
description = "Fluent-based i18n system for FreeSynergy — library + gRPC/REST service"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-i18n"

[[bin]]
name = "fs-i18n"
path = "src/main.rs"

[features]
dioxus = ["dep:dioxus-core"]

[dependencies]
# FS primitives
fs-error = { path = "../fs-libs/fs-error" }

# Fluent
fluent-bundle = { version = "0.16" }
unic-langid   = { version = "0.9", features = ["macros"] }

# Serialization
toml  = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"

# gRPC
tonic = "0.12"
prost = "0.13"

# REST + OpenAPI
axum              = "0.7"
utoipa            = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tower-http        = { version = "0.6", features = ["trace"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# OCI artifact extraction
flate2 = "1"
tar    = "0.4"

# File watching (inotify/kqueue/FSEvents)
notify = "6"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.dioxus-core]
version  = "0.7"
optional = true

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
tonic-build         = "0.12"
protoc-bin-vendored = "3"
